<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>merits_project</name>
  <version>0.0.0</version>
  <description>MERITS 2023 Project</description>
  <maintainer email="henry.mcdevitt24@fivetowns.net">Henry McDevitt</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>numpy</depend>
  <depend>cv2</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>project_interfaces</depend>
  <depend>ultralytics<depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
